--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,27 @@ __pycache__/
 py_modules/
 db.sqlite3
 0*.py
+
+# Numerous always-ignore extensions
+*.diff
+*.err
+*.orig
+*.log
+*.rej
+*.swo
+*.swp
+*.vi
+*~
+*.sass-cache
+
+# OS or Editor folders
+.DS_Store
+.cache
+.project
+.settings
+.tmproj
+nbproject
+Thumbs.db
+
+# NPM packages folder.
+node_modules/
