--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Django==2.1.4
 django-appconf==1.0.2
 django-cors-headers==2.4.0
 django-sslserver==0.20
+django-webpack-loader==0.6.0
 fido2==0.5.0
 idna==2.8
 pycparser==2.19
