--- a/package.json
+++ b/package.json
@@ -21,14 +21,23 @@
   "devDependencies": {
     "@material/button": "^0.43.0",
     "@material/card": "^0.43.0",
+    "@material/chips": "^0.43.0",
+    "@material/form-field": "^0.43.0",
+    "@material/icon-button": "^0.43.0",
+    "@material/layout-grid": "^0.41.0",
+    "@material/menu": "^0.43.0",
     "@material/ripple": "^0.43.0",
+    "@material/textfield": "^0.43.0",
     "@material/top-app-bar": "^0.43.0",
+    "@material/typography": "^0.43.0",
     "autoprefixer": "^9.4.5",
+    "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "cbor": "^4.1.4",
+    "cbor-js": "^0.1.0",
     "css-loader": "^2.1.0",
     "extract-loader": "^3.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
