--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@material/button": "^0.43.0",
     "@material/card": "^0.43.0",
     "@material/chips": "^0.43.0",
+    "@material/dialog": "^0.43.0",
     "@material/form-field": "^0.43.0",
     "@material/icon-button": "^0.43.0",
     "@material/layout-grid": "^0.41.0",
